codama-macros/tests/codama_attribute/values_nodes/program/unrecognized_program.fail.rs
use codama_macros::codama;

#[codama(default_value = program("banana"))]
pub struct Test;

fn main() {}